--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
       </div>
     </footer>
     <!-- Бекдроп -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <form class="modal-form" autocomplete="off">
           <b class="modal-form__title"
@@ -577,6 +577,6 @@
         </button>
       </div>
     </div>
-    <script src="./js/modal.js"></script>
+    <script src="./js/modal.js"></script> -->
   </body>
 </html>
