--- a/portfolio.html
+++ b/portfolio.html
@@ -29,14 +29,14 @@
         <nav class="navigation">
           <ul class="navigation__list">
             <li class="navigation__item">
-              <a
-                class="navigation__link navigation__link--current"
-                href="./index.html"
-                >Студия</a
-              >
+              <a class="navigation__link" href="./index.html">Студия</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link" href="./portfolio.html">Портфолио</a>
+              <a
+                class="navigation__link navigation__link--current"
+                href="./portfolio.html"
+                >Портфолио</a
+              >
             </li>
             <li class="navigation__item">
               <a class="navigation__link" href="">Контакты</a>
