--- a/portfolio.html
+++ b/portfolio.html
@@ -551,6 +551,7 @@
               class="footer-form__input"
               name="email"
               placeholder="E-mail"
+              required
             />
             <button
               type="submit"
