--- a/index.html
+++ b/index.html
@@ -643,6 +643,7 @@
               class="footer-form__input"
               name="email"
               placeholder="E-mail"
+              required
             />
             <button
               type="submit"
@@ -667,21 +668,26 @@
           >
           <label class="modal-form__field">
             <span class="modal-form__label">Имя</span>
-            <input type="text" class="modal-form__input" name="name" />
+            <input type="text" class="modal-form__input" name="name" required />
             <svg class="modal-form__icon" width="18" height="18">
               <use href="./images/icons/icons.svg#icon-person"></use>
             </svg>
           </label>
           <label class="modal-form__field">
             <span class="modal-form__label">Телефон</span>
-            <input type="tel" class="modal-form__input" name="tel" />
+            <input type="tel" class="modal-form__input" name="tel" required />
             <svg class="modal-form__icon" width="18" height="18">
               <use href="./images/icons/icons.svg#icon-phone"></use>
             </svg>
           </label>
           <label class="modal-form__field">
             <span class="modal-form__label">Почта</span>
-            <input type="email" class="modal-form__input" name="email" />
+            <input
+              type="email"
+              class="modal-form__input"
+              name="email"
+              required
+            />
             <svg class="modal-form__icon" width="18" height="18">
               <use href="./images/icons/icons.svg#icon-email"></use>
             </svg>
@@ -700,6 +706,7 @@
               class="agreement__checkbox visually-hidden"
               name="agreement"
               value="agreement"
+              required
             />
             <svg class="agreement__icon" width="16" height="15">
               <use href="./images/icons/icons.svg#icon-checkbox"></use>
