--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
     <header class="header">
       <!-- Логотип-посилання -->
       <div class="container header-container">
-        <a class="logo" href="./index.html"
+        <a class="logo" href="./index.html" lang="en"
           ><span class="logo logo--accented">Web</span>Studio</a
         >
         <!-- Навігаційна панель посиланнь -->
@@ -471,7 +471,7 @@
       <div class="container footer-container">
         <div class="footer-address-container">
           <!-- Логотип-посилання -->
-          <a class="logo footer-logo" href="./index.html">
+          <a class="logo footer-logo" href="./index.html" lang="en">
             <span class="logo logo--accented">Web</span>Studio
           </a>
           <!-- Контакти -->
