--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="header">
       <!-- Логотип-посилання -->
       <div class="container header-container">
-        <a class="logo" href="./index.html"
+        <a class="logo" href="./index.html" lang="en"
           ><span class="logo logo--accented">Web</span>Studio</a
         >
         <!-- Навігаційна панель посиланнь -->
@@ -563,7 +563,7 @@
       <div class="container footer-container">
         <div class="footer-address-container">
           <!-- Логотип-посилання -->
-          <a class="logo footer-logo" href="./index.html">
+          <a class="logo footer-logo" href="./index.html" lang="en">
             <span class="logo logo--accented">Web</span>Studio
           </a>
           <!-- Контакти -->
