--- a/portfolio.html
+++ b/portfolio.html
@@ -74,68 +74,6 @@
           </svg>
         </button>
       </div>
-      <div class="mobile-menu-backdrop" data-mobile-menu>
-        <aside class="mobile-menu">
-          <nav class="mobile-menu-navigation">
-            <ul class="mobile-menu-navigation__list">
-              <li class="mobile-menu-navigation__item">
-                <a href="./index.html" class="mobile-menu-navigation__link"
-                  >Студия</a
-                >
-              </li>
-              <li class="mobile-menu-navigation__item">
-                <a
-                  href="./portfolio.html"
-                  class="mobile-menu-navigation__link mobile-menu-navigation__link--current"
-                  >Портфолио</a
-                >
-              </li>
-              <li class="mobile-menu-navigation__item">
-                <a href="" class="mobile-menu-navigation__link">Контакты</a>
-              </li>
-            </ul>
-          </nav>
-          <ul class="mobile-menu-contacts__list">
-            <li class="mobile-menu-contacts__item">
-              <a href="tel:+380961111111" class="mobile-menu-contacts__link-tel"
-                >+38 096 111 11 11</a
-              >
-            </li>
-            <li class="mobile-menu-contacts__item">
-              <a
-                href="mailto:info@devstudio.com"
-                class="mobile-menu-contacts__link-mail"
-                >info@devstudio.com</a
-              >
-            </li>
-          </ul>
-          <ul class="mobile-menu-socials__list">
-            <li class="mobile-menu-socials__item">
-              <a href="" class="mobile-menu-socials__link">Instagram</a>
-            </li>
-            <li class="mobile-menu-socials__item">
-              <a href="" class="mobile-menu-socials__link">Twitter</a>
-            </li>
-            <li class="mobile-menu-socials__item">
-              <a href="" class="mobile-menu-socials__link">Facebook</a>
-            </li>
-            <li class="mobile-menu-socials__item">
-              <a href="" class="mobile-menu-socials__link">LinkedIn</a>
-            </li>
-          </ul>
-          <button
-            class="mobile-menu-close-button"
-            type="button"
-            aria-label="Закрыть мобильное меню"
-            aria-expanded="false"
-            data-mobile-menu-close
-          >
-            <svg class="mobile-menu-close__icon" width="40" height="40">
-              <use href="./images/icons/icons.svg#icon-close"></use>
-            </svg>
-          </button>
-        </aside>
-      </div>
     </header>
     <!-- Головний контент сторінки Портфоліо -->
     <main>
@@ -567,6 +505,69 @@
         </div>
       </div>
     </footer>
+    <!-- Мобільне меню -->
+    <div class="mobile-menu-backdrop" data-mobile-menu>
+      <aside class="mobile-menu">
+        <nav class="mobile-menu-navigation">
+          <ul class="mobile-menu-navigation__list">
+            <li class="mobile-menu-navigation__item">
+              <a href="./index.html" class="mobile-menu-navigation__link"
+                >Студия</a
+              >
+            </li>
+            <li class="mobile-menu-navigation__item">
+              <a
+                href="./portfolio.html"
+                class="mobile-menu-navigation__link mobile-menu-navigation__link--current"
+                >Портфолио</a
+              >
+            </li>
+            <li class="mobile-menu-navigation__item">
+              <a href="" class="mobile-menu-navigation__link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="mobile-menu-contacts__list">
+          <li class="mobile-menu-contacts__item">
+            <a href="tel:+380961111111" class="mobile-menu-contacts__link-tel"
+              >+38 096 111 11 11</a
+            >
+          </li>
+          <li class="mobile-menu-contacts__item">
+            <a
+              href="mailto:info@devstudio.com"
+              class="mobile-menu-contacts__link-mail"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+        <ul class="mobile-menu-socials__list">
+          <li class="mobile-menu-socials__item">
+            <a href="" class="mobile-menu-socials__link">Instagram</a>
+          </li>
+          <li class="mobile-menu-socials__item">
+            <a href="" class="mobile-menu-socials__link">Twitter</a>
+          </li>
+          <li class="mobile-menu-socials__item">
+            <a href="" class="mobile-menu-socials__link">Facebook</a>
+          </li>
+          <li class="mobile-menu-socials__item">
+            <a href="" class="mobile-menu-socials__link">LinkedIn</a>
+          </li>
+        </ul>
+        <button
+          class="mobile-menu-close-button"
+          type="button"
+          aria-label="Закрыть мобильное меню"
+          aria-expanded="false"
+          data-mobile-menu-close
+        >
+          <svg class="mobile-menu-close__icon" width="40" height="40">
+            <use href="./images/icons/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+      </aside>
+    </div>
     <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
