--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
         <div class="footer-address-container">
           <!-- Логотип-посилання -->
           <a class="logo footer-logo" href="./index.html" lang="en">
-            <span class="logo logo--accented">Web</span>Studio
+            <span class="logo logo--accented footer-logo--accented">Web</span>Studio
           </a>
           <!-- Контакти -->
           <address class="address">
