--- a/portfolio.html
+++ b/portfolio.html
@@ -415,7 +415,7 @@
           </a>
           <!-- Контакти -->
           <address class="address">
-            <!-- Поки список посиланнь на контакти -->
+            <!-- Список посиланнь на контакти -->
             <ul class="address__list">
               <li class="address__item">
                 <p class="address__text">г. Киев, пр-т Леси Украинки, 26</p>
