--- a/index.html
+++ b/index.html
@@ -447,6 +447,7 @@
       <section class="section clients">
         <div class="container">
           <h2 class="section__title">Постоянные клиенты</h2>
+          <!-- Список постійних клієнтів -->
           <ul class="clients-set">
             <li class="clients__item">
               <a href="" class="clients__link" aria-label="Имя компании">
@@ -500,11 +501,12 @@
         <div class="footer-address-container">
           <!-- Логотип-посилання -->
           <a class="logo footer-logo" href="./index.html" lang="en">
-            <span class="logo logo--accented footer-logo--accented">Web</span>Studio
+            <span class="logo logo--accented footer-logo--accented">Web</span
+            >Studio
           </a>
           <!-- Контакти -->
           <address class="address">
-            <!-- Поки список посиланнь на контакти -->
+            <!-- Список посиланнь на контакти -->
             <ul class="address__list">
               <li class="address__item">
                 <p class="address__text">г. Киев, пр-т Леси Украинки, 26</p>
@@ -522,6 +524,7 @@
             </ul>
           </address>
         </div>
+        <!-- Список соціальних мереж -->
         <div class="footer-socials-container">
           <b class="container__title">присоединяйтесь</b>
           <ul class="socials footer-socials">
@@ -571,6 +574,7 @@
             </li>
           </ul>
         </div>
+        <!-- Форма підписки -->
         <div class="footer-form-container">
           <b class="container__title">Подпишитесь на рассылку</b>
           <form class="footer-form">
@@ -597,7 +601,9 @@
     </footer>
     <!-- Бекдроп -->
     <div class="backdrop is-hidden" data-modal>
+      <!-- Модальне вікно -->
       <div class="modal">
+        <!-- Форма зворотнього зв'язку -->
         <form class="modal-form" autocomplete="off">
           <b class="modal-form__title"
             >Оставьте свои данные, мы вам перезвоним</b
