--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,7 @@
   </head>
 
   <body>
+    <!-- Сторінка Портфоліо -->
     <!-- Шапка -->
     <header class="header">
       <!-- Логотип-посилання -->
@@ -77,7 +78,7 @@
     </header>
     <!-- Головний контент сторінки Портфоліо -->
     <main>
-      <!-- Секція-Список фільтрів -->
+      <!-- Список фільтрів -->
       <section class="section">
         <div class="container">
           <h1 class="visually-hidden">Портфолио</h1>
@@ -129,6 +130,7 @@
               </button>
             </li>
           </ul>
+          <!-- Продукти -->
           <h2 class="visually-hidden">Нашы продукты</h2>
           <ul class="products-set">
             <li class="products__card">
@@ -405,6 +407,7 @@
         </div>
       </section>
     </main>
+    <!-- Підвал -->
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-address-container">
@@ -433,6 +436,7 @@
             </ul>
           </address>
         </div>
+        <!-- Список соціальних мереж -->
         <div class="footer-socials-container">
           <b class="container__title">присоединяйтесь</b>
           <ul class="socials footer-socials">
@@ -482,6 +486,7 @@
             </li>
           </ul>
         </div>
+        <!-- Форма підписки -->
         <div class="footer-form-container">
           <b class="container__title">Подпишитесь на рассылку</b>
           <form class="footer-form">
