--- a/index.html
+++ b/index.html
@@ -578,9 +578,11 @@
         <div class="footer-form-container">
           <b class="container__title">Подпишитесь на рассылку</b>
           <form class="footer-form">
+            <label for="email" class="visually-hidden">Электронная почта</label>
             <input
-              type="email"
+              id="email"
               class="footer-form__input"
+              type="email"
               name="email"
               placeholder="E-mail"
               required
@@ -610,29 +612,40 @@
           >
           <label class="modal-form__field">
             <span class="modal-form__label">Имя</span>
-            <input type="text" class="modal-form__input" name="name" required />
-            <svg class="modal-form__icon" width="18" height="18">
-              <use href="./images/icons/icons.svg#icon-person"></use>
-            </svg>
+            <div class="input__wrapper">
+              <input
+                type="text"
+                class="modal-form__input"
+                name="name"
+                required
+              />
+              <svg class="modal-form__icon" width="18" height="18">
+                <use href="./images/icons/icons.svg#icon-person"></use>
+              </svg>
+            </div>
           </label>
           <label class="modal-form__field">
             <span class="modal-form__label">Телефон</span>
-            <input type="tel" class="modal-form__input" name="tel" required />
-            <svg class="modal-form__icon" width="18" height="18">
-              <use href="./images/icons/icons.svg#icon-phone"></use>
-            </svg>
+            <div class="input__wrapper">
+              <input type="tel" class="modal-form__input" name="tel" required />
+              <svg class="modal-form__icon" width="18" height="18">
+                <use href="./images/icons/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
           </label>
           <label class="modal-form__field">
             <span class="modal-form__label">Почта</span>
-            <input
-              type="email"
-              class="modal-form__input"
-              name="email"
-              required
-            />
-            <svg class="modal-form__icon" width="18" height="18">
-              <use href="./images/icons/icons.svg#icon-email"></use>
-            </svg>
+            <div class="input__wrapper">
+              <input
+                type="email"
+                class="modal-form__input"
+                name="email"
+                required
+              />
+              <svg class="modal-form__icon" width="18" height="18">
+                <use href="./images/icons/icons.svg#icon-email"></use>
+              </svg>
+            </div>
           </label>
           <label class="modal-form__field modal-form__comment">
             <span class="modal-form__label">Коментарий</span>
