--- a/index.html
+++ b/index.html
@@ -578,14 +578,13 @@
         <div class="footer-form-container">
           <b class="container__title">Подпишитесь на рассылку</b>
           <form class="footer-form">
-            <label for="email" class="visually-hidden">Электронная почта</label>
             <input
-              id="email"
               class="footer-form__input"
               type="email"
               name="email"
               placeholder="E-mail"
               required
+              aria-label="Введите вашу электронную почту"
             />
             <button
               type="submit"
