--- a/portfolio.html
+++ b/portfolio.html
@@ -491,11 +491,12 @@
           <b class="container__title">Подпишитесь на рассылку</b>
           <form class="footer-form">
             <input
-              type="email"
               class="footer-form__input"
+              type="email"
               name="email"
               placeholder="E-mail"
               required
+              aria-label="Введите вашу электронную почту"
             />
             <button
               type="submit"
