--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
           >
           <label class="modal-form__field">
             <span class="modal-form__label">Имя</span>
-            <div class="input__wrapper">
+            <span class="input__wrapper">
               <input
                 type="text"
                 class="modal-form__input"
@@ -621,20 +621,20 @@
               <svg class="modal-form__icon" width="18" height="18">
                 <use href="./images/icons/icons.svg#icon-person"></use>
               </svg>
-            </div>
+            </span>
           </label>
           <label class="modal-form__field">
             <span class="modal-form__label">Телефон</span>
-            <div class="input__wrapper">
+            <span class="input__wrapper">
               <input type="tel" class="modal-form__input" name="tel" required />
               <svg class="modal-form__icon" width="18" height="18">
                 <use href="./images/icons/icons.svg#icon-phone"></use>
               </svg>
-            </div>
+            </span>
           </label>
           <label class="modal-form__field">
             <span class="modal-form__label">Почта</span>
-            <div class="input__wrapper">
+            <span class="input__wrapper">
               <input
                 type="email"
                 class="modal-form__input"
@@ -644,7 +644,7 @@
               <svg class="modal-form__icon" width="18" height="18">
                 <use href="./images/icons/icons.svg#icon-email"></use>
               </svg>
-            </div>
+            </span>
           </label>
           <label class="modal-form__field modal-form__comment">
             <span class="modal-form__label">Коментарий</span>
